[tool.poetry]
name = "weightracker.zz50.co.uk"
version = "0.1.0"
description = ""
authors = ["David <david@sulaco.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
django = "^4.2.1"
gunicorn = "^21.2.0"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]
pydevd-pycharm = "^222.3345.40"
watchdog = {extras = ["watchmedo"], version = "^2.3.0"}

[tool.black]
include = '\.py?$'
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
skip_gitignore = true
sections='''
FUTURE,
STDLIB,
THIRDPARTY,
FIRSTPARTY,
LOCALFOLDER,
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
